[metadata]

name = zof
version = 0.50.0
description = my package description
long_description: file: README.rst, HISTORY.rst
url = https://github.com/byllyfish/zof
author = William W. Fisher
author_email = william.w.fisher@gmail.com

[options]

zip_safe = True
packages = find:

[coverage:run]

omit = 
    */extra/rest_api.py
